.kube/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - host: qalev.com
      http:
        paths:
          - path: /report
            pathType: Prefix
            backend:
              service: 
                name: report-service
                port:
                  number: 8080
          - path: /ack
            pathType: Prefix
            backend:
              service: 
                name: ack-service
                port:
                  number: 8081
