.kube/k8s/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: test-ingress
spec:
    defaultBackend:
        service:
            name: test
            port:
                number: 80
